--- a/techTitansFe/package.json
+++ b/techTitansFe/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@azure/msal-browser": "^4.12.0",
     "@azure/msal-react": "^3.0.12",
+    "@azure/msal-angular": "3.0.25",
+    "@azure/msal-browser": "3.26.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
