--- a/techTitansFe/Dockerfile
+++ b/techTitansFe/Dockerfile
@@ -1,26 +1,18 @@
-# Step 1: Build the app
-FROM node:alpine as build
+# Step 1: Build the React app
+FROM node:18 AS build
 
+# Set the working directory in the container
 WORKDIR /app
 
-COPY package.json package-lock.json ./
+# Copy package.json and package-lock.json (or yarn.lock) and install dependencies
+COPY package*.json ./
 RUN npm install
 
+# Copy all source files into the container
 COPY . .
+
+# Build the app for production
 RUN npm run build
 
-# Step 2: Serve the built app using `serve`
-FROM node:alpine as production
-
-WORKDIR /app
-
-# Install a lightweight HTTP server
-RUN npm install -g serve
-
-# Copy built files from previous stage
-COPY --from=build /app/dist ./dist
-
-EXPOSE 3000
-
-# Serve the dist folder
-CMD ["serve", "-s", "dist", "-l", "3000"]
+# Step 2: Serve the built app using a static server
+FROM nginx:alpine
