--- a/techTitansFe/package.json
+++ b/techTitansFe/package.json
@@ -4,17 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "vite --host 0.0.0.0 --port 3000"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
+    "@azure/msal-browser": "^4.12.0",
     "@azure/msal-react": "^3.0.12",
-    "@azure/msal-angular": "3.0.25",
-    "@azure/msal-browser": "3.26.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
@@ -31,11 +26,9 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "globals": "^16.0.0"
   }
 }
